test/pass/pass_10.prsl
// RUN: %edir/prsl --codegen %s -o pass_10.ll
// RUN: clang++ -Wno-override-module pass_10.ll -o pass_10
// RUN: %S/pass_10 | filecheck %s --match-full-lines
// RUN: %edir/prsl %s | filecheck %s --match-full-lines
// CHECK: 0
// CHECK-NEXT: 1
// CHECK-NEXT: 1
// CHECK-NEXT: 0
// CHECK-NEXT: 1

print 10 == 20;
print 10 == 10;
print (10 == 10) == (10 == 10);
print (10 == 10) == (10 == 20);
print (10 == 20) == (10 == 20);
