test/fail/fail_6.prsl
// RUN: (%edir/prsl --codegen %s 2>&1) | filecheck %s
// RUN: (%edir/prsl %s 2>&1) | filecheck %s
// CHECK: [Line 10] Error: --: Illegal postfix expression

a = 2;

if (a > 1)
    print a;
else
    print 0--;